# ChangeLog for dev-util/gperf
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.58 2014/06/06 16:07:32 vapier Exp $

  06 Jun 2014; Mike Frysinger <vapier@gentoo.org> gperf-3.0.4.ebuild:
  Add arm64 love.

  26 May 2013; Mike Frysinger <vapier@gentoo.org> gperf-3.0.4.ebuild:
  Update to EAPI=4.  Respect $AR and $CPPFLAGS #444078 by Denis M..

  23 Feb 2013; Zac Medico <zmedico@gentoo.org> gperf-3.0.4.ebuild:
  Add ~arm-linux keyword.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> gperf-3.0.4.ebuild:
  keyword ~amd64-fbsd

  04 Feb 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Added myself as maintainer

  03 May 2011; Fabian Groffen <grobian@gentoo.org> gperf-3.0.4.ebuild:
  Marked ~x64-freebsd

  13 Feb 2011; Fabian Groffen <grobian@gentoo.org> gperf-3.0.4.ebuild:
  Marked ~sparc64-solaris

  10 Feb 2011; Michael Haubenwallner <haubi@gentoo.org> gperf-3.0.4.ebuild:
  add ~ppc-aix keyword.

  31 Jan 2011; Fabian Groffen <grobian@gentoo.org> gperf-3.0.4.ebuild:
  Marked ~m68k-mint, bug #353075

  06 Apr 2010; Jonathan Callen <abcd@gentoo.org> gperf-3.0.4.ebuild:
  Bump to EAPI=3, add prefix keywords

  02 Nov 2009; Raúl Porcel <armin76@gentoo.org> gperf-3.0.4.ebuild:
  ia64/s390/sh/sparc stable wrt #288572

  31 Oct 2009; Brent Baude <ranger@gentoo.org> gperf-3.0.4.ebuild:
  Marking gperf-3.0.4 ppc64 for bug 288572

  30 Oct 2009; Markus Meier <maekke@gentoo.org> gperf-3.0.4.ebuild:
  arm/x86 stable, bug #288572

  24 Oct 2009; nixnut <nixnut@gentoo.org> gperf-3.0.4.ebuild:
  ppc stable #288572

  22 Oct 2009; Tobias Klausmann <klausman@gentoo.org> gperf-3.0.4.ebuild:
  Stable on alpha, bug #288572

  13 Oct 2009; Jeroen Roovers <jer@gentoo.org> gperf-3.0.4.ebuild:
  Stable for HPPA (bug #288572).

  11 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  gperf-3.0.4.ebuild:
  Stable for amd64 per bug #288572.

*gperf-3.0.4 (11 Sep 2009)
