@@ -4,26 +4,28 @@ Hash: SHA256
 AUX tuned.initd 525 SHA256 b724d4be60a93a64652e571357fa18437fd5859525c33d698b7bc71b368936a7 SHA512 16bf389b5739e18f843f8526ae7d366cafd41dcaab6936584e25a026600b9e6544dfe0cd2d09babd40eec6bb47a15ff837a3ba69a19d1dca997ba9d65789b379 WHIRLPOOL bc10c9fd2dac0ac71e1a4bab6acb08cdcfbf1c9ab4f0888b7aac685ce3fe76a43b2d6fc3772ebf199c14dd93165e6f518b6a1093e1bdb59e78b7f21d10522ba7
 DIST tuned-2.4.1.tar.bz2 81052 SHA256 fd2514ec269387c7c555b5d12534ce258ecdb021cd66f64c5678eea7dcbda54f SHA512 12106f441cda10d1ddb5d4fc4e64be7100ec2b1d48117a9c83bbc11e093a59c1a5e8effa22ea563481b66748db38ebb8a493dbb1e4707b16f6f3cae2de966bf1 WHIRLPOOL 21011bbdfb170c5f85313a5cfd7c26bf7e57a3693a0a56c0a096b788b2fee6d390e7391b1083ec5fd610d34caf1985ffa310b6befc7950080cf99931db99430d
 DIST tuned-2.5.0.tar.bz2 95651 SHA256 2d7fe44626d236b158b0259938d757846d2455f5a91ab6412a134e6ac2db7feb SHA512 59d3014cc2c04f2cffbde02f46fdbce223bff827fba1c07e5dd5e821fc9d7ea2867c24c5d5fc42ef294fb31d24cad3c8715fec7d3113b25ce316b457fd40bc22 WHIRLPOOL 4e48dfc4fd89de061a099ccfef70103d4920f3eb06ccb09e767e525bafcae700386b47b776009488f0e8c0bdfdf0ddac2bf72cf8a1b9f3935879fb1691d08c0a
+DIST tuned-2.5.1.tar.bz2 96319 SHA256 7eccf1d0807e8e0774e7969f9dbe5173cd85b2449f1f259a3b31ecb022cfbe88 SHA512 5d818f15a439f85fa26cefcc3dcc7968d23f3f29f26bbf99480ccbde90d87d6f5f81709820232b127d435c30d59a00c9d50f630c7c2b83f249f485c3f50305a5 WHIRLPOOL 55ec1e65925a1e06fee2dffb2ff004503a2e2d53933c530bbac081e30180684760fac16da79039a77751c36983c641b920473d9ef2ee8235dd4415f6d986f468
 EBUILD tuned-2.4.1.ebuild 1074 SHA256 3f478c0dc981d638bc6d9155823c4c7cd88dc6ca97e55fc51e812a5668958e8d SHA512 bb0202dcab9a90709d8d6c4d96f6ddea4fb5b194cb620f7be572d681acdc370d0e207d6fb307412b67cda25f9f59f946654fe14b843305721e0ba42bfe3a1b64 WHIRLPOOL 80bec23b1ecee619a9e457658e229f4cb3079489d0f5eff09daaca6d4e14c9a18fb9828489e4fa8dad261d9213625b63447f1daf106f1325eb7b3fee27c842f1
 EBUILD tuned-2.5.0.ebuild 1074 SHA256 af0a88cbec9c9dcd326660681dff0c368a65d48db5562533bb8c106a2a71cd11 SHA512 b117eb9f67fdd5a73b1123a31eea026287f19ea8e26f6ba97327b14ea2403a62f3aed4acf4268eca183ed4d8f17ea5ee50171779ee50c20c7fa7fe04a6eb7a06 WHIRLPOOL eca7abb9de023d19d5afbca4b9847cacb57160b487e5d2ab53a7318926eccb231179b93aee0e63985b53fdcaf70ce0634e094b4d783f225245bd8db5bb072df9
-MISC ChangeLog 651 SHA256 a7a9fbca2f9f3c29ca125e6b1cdaf895ae300df25e09fc89f62c1d972f194b15 SHA512 d18f4431b7bcdead08e56a86fc3a76406de692c30d1ea58107f4e518d82d38319496f5dcd0f26edf75ee155ffec5fb105780b9bcc8c9854e6c183c20de2a6602 WHIRLPOOL d0ceb727c6ef3fc647cdcb90b387606929cf8ec5f05bf0839ad9a119deab1f1aeaece9b8ca2f48b7457c7310648ce73512e1042f305062ab7aeea3f0ab08d89b
+EBUILD tuned-2.5.1.ebuild 1074 SHA256 db991140e4d004b2a700bab7bdf782885845c165bbe9e13d984b96df6528409a SHA512 a9cc7aaf9d897f2c9646ca51d2c767a349bec2d4a94f133220bd442d3a776955b24a1767f46f54930dd2ad5304719d95de4b7441f09f046640f522181dfda238 WHIRLPOOL d2b0db4527a4875ff8a6c41d3b36893e346c30d04e3ce076efd486ab41c7030eefc0bd68ddd8496b035920bbaa99a7542585db2753dbcd46ce12440a3ebd3277
+MISC ChangeLog 759 SHA256 42d87f48bf24bc53ceb24b8a56fa171ea31488d68a8fffc5457085b1ec61e2c2 SHA512 3639341864212fdae6f6ea813689ef6db0b30c1318b780b6084a704699b922624af799e2420e26c31d67c2c663cd824aec4e095c3d78bb8e0d58c47811b6434b WHIRLPOOL 82df65fd1c98ae04b252d310d054fcf98824ed5a7255e93c8365b15d7138f2f54d27a7a6107cc4fa7ac3b775ea198215fb9c4024dc935bfabc7bd63937d35131
 MISC metadata.xml 374 SHA256 a88b2c3cbd04512a1dc8d3fd8fd14b74b4cc5effee6a1d7c2288401164ba29f3 SHA512 45b9052fe74bb36a183357e7c5e5757a90086a9a97d88beddbf2c6d4ea91783a13dfeb5c02aba30eda7da7b0666a7c17a1d0d3fe8f0fdbd566a662e4375231db WHIRLPOOL c5626f49590855f9194077e267534372c33c9eb08e712716592019ca608b8f006045710f562b3a9225dab32d9aa7ccdbd34db1300bc0186cebcc7fafa035121d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVpUW4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVxJJZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCNUJBQjhDOUMzMUI3MTE1NjcwMjIzREMz
-MUFBRUE0NzU5NERCQkVEAAoJEDGq6kdZTbvtph8P/1xq16J4F0rAwFs0TKmKpyDx
-gflW/OxXb/nUTe0Xd9MVu7dnpvflOYaF+8pgnbC8m+/NzfwB9c10dqPzBXOdkAUB
-ilj7unvF1PLIR6Erm70oOQQDsDbBLEApmvNjXYTNtxkUl+gvAskUgjlxe9j4CJa8
-n3q7zZpsMVQuby6O6ux9PgcI0qPRD1GVqv8/CPHSSucZD0nDc1EbhA0PgYreCbTz
-SbkUP86zfYx6CX53pWMUMbRQod9dUCm2ktRld2lXvludfNuCsv+6m7GTRoPcMpsP
-ZbU8VikPw5OK//AnLn4JAjoBIp0rzth4fmrsWWiOJZ2mcCXmNGYis+HKgvkpE+Rz
-8mTbGemZx1aDl33sssmOxhY7Tc+WkGEqkLJzVXK5gol2cFzNWMiyoLXJoKkGyzaW
-Jr6sZMTkJXUmQpIQ8p+7t9QldYP0p6pF7NlV8LFuJOlulshkw1+z4nQF2kNr1y6I
-B2xbFF6TzFueHTgNZ1UIrAszUDtY+Kihij3KE79xAxZOL7KBQlbnotJwHdJuD0Al
-gY9QYKLPbKCEXdxHYqN/VpYcZ9j3M5VGjibdArfF5rpt5oelQ3AtvQgAJLoOBPX0
-adUtFrNZbfWMxPC+SFMuIYzt9qrZOsg3AVRO0ZF1jsxQ+T2C0qlIzduZH8sNupTD
-UYq/Pf+h69i5CGpYwYte
-=Y0aa
+MUFBRUE0NzU5NERCQkVEAAoJEDGq6kdZTbvtK0gQAIh6VoTVjJCn3juwa985/fVc
+wYFmVYapEUsUm7sA2hy39kgzuDgUH0me+lWx49K52lh8uGHWVDg75o3SaL5gHivp
+rgBLjNgIC7GMCuwnF9ALfMU/U9zIb6n1kYETnq5HH7spRMigfbqgJNxjJ4nEFGvu
+btCfSrP7zHqbJfPEGgSWatCJ0H/54FcSij1aQJGxbfPfXxVAmQblLG4p5KPDkcEq
+TVkmjqdNQODMFG/vWFrGC9dAoua4UW41+tF6vZ1xnwmzqlxnXmLWCnv5h0Yuzalv
+GtX5E6P+qup8r4Wgd/CAAs0RxLwIUdWWnV5dMQS13VBD8/Gev8nLNGHBJ3kqXrZG
+Xu0/eLXphVCHtSlE3HHzFIubkkwIgMVZApwzcsG/X95bLRpeBPv9bq2KZwg9j5kD
+dWVJpI6RCfAKOIRT2Nt5Pvm3KEjkzrwxznxBMemexvsfWixs4z5uyU/FX9o5OgXp
+mZUpDQr9SsuRiPFMDuz9bu9AcmLkFbq4c1eE2UhxV9193r20EkItIxBb7MvVOhkO
+PVHI69y5m4OJNXFQEAaX3zVYII9LzzRYBYq9T/XaTF7tzL1VIKMveapkNei0L6Ah
+mW6nid/6ObADWYasUYscyjJv3XDLluGd9j6cTHwj3vTXgPrnqZaMLpqrSyaS2LDV
+OP79PJ3RyWL7t76l4wfg
+=q8/q
 -----END PGP SIGNATURE-----
